# computacao-distribuida

./: .dockerignore  .gitignore  README.md  docker-compose.yml  setup.ps1  setup.sh
.github/instructions/: INSTRUÇÃO DO PROFESSOR PARA O PROJETO.instructions.md  PLANO DETALHADO.instructions.md
client_cpp/: CMakeLists.txt  Dockerfile
client_cpp/src/: client.cc
client_python/: Dockerfile  client.py  requirements.txt
docs/: ANALISE_TRATAMENTO_ERROS.md  AVALIACAO.md  COMPLETO.md  CROSSPLATFORM.md  FAQ.md  LINUX.md  QUICKSTART.md  README.md  RELATORIO.md  RESUMO_LINUX.md  STATUS.md  SUPORTE_LINUX.md
logs/: .gitkeep
proto/: file_processor.proto
scripts/: build.ps1  build.sh  generate_proto.ps1  generate_proto.sh  prepare_test_files.ps1  prepare_test_files.sh  run_client_cpp.ps1  run_client_cpp.sh  run_client_python.ps1  run_client_python.sh  run_server.ps1  run_server.sh  run_tests.ps1  run_tests.sh
server_cpp/: CMakeLists.txt  Dockerfile
server_cpp/include/: file_processor_service_impl.h  file_processor_utils.h  logger.h
server_cpp/src/: file_processor_service_impl.cc  server.cc
tests/: test_suite.py
tests/test_files/: sample_document.txt
tests/test_results/: .gitkeep
